<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/generalBg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.easybike.TourDetailsActivity$PlaceholderFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,2" >

            <!-- Tour image -->

            <TableRow>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginBottom="@dimen/minimum_margin"
                    android:layout_span="3"
                    android:src="@drawable/placeholder" />
            </TableRow>
            
            <!-- Name line -->

            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/minimum_margin"
                    android:layout_marginBottom="@dimen/minimum_margin"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_label"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minimum_margin"
                        android:text="@string/default_value"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

            <!-- Status line -->

            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginBottom="@dimen/minimum_margin"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/status_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_label"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/status_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minimum_margin"
                        android:text="@string/default_value" />
                </LinearLayout>
            </TableRow>

            <!-- Total km line -->

            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginBottom="@dimen/minimum_margin"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/totkm_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totkm_label"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/totkm_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minimum_margin"
                        android:text="@string/default_value" />
                </LinearLayout>
            </TableRow>

            <!-- Total time line -->

            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginBottom="@dimen/minimum_margin"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tottime_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tottime_label"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/tottime_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minimum_margin"
                        android:text="@string/default_value" />
                </LinearLayout>
            </TableRow>

            <!-- Number of stops line -->

            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginBottom="@dimen/minimum_margin"
                    android:gravity="center_vertical"
                    android:textStyle="italic" >

                    <TextView
                        android:id="@+id/stopnum_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stopnum_label"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/stopnum_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minimum_margin"
                        android:text="@string/default_value" />
                </LinearLayout>
            </TableRow>

            <!-- Remaining distance line -->

            <TableRow
                android:id="@+id/remainingDistanceLine">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginBottom="@dimen/minimum_margin"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/left_distance_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/left_distance_label"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/left_distance_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minimum_margin"
                        android:text="@string/default_value" />
                </LinearLayout>
            </TableRow>

            <!-- Remaining time line -->

            <TableRow
                android:id="@+id/remainingTimeLine">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginBottom="@dimen/minimum_margin"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/left_time_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/left_time_label"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/left_time_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minimum_margin"
                        android:text="@string/default_value" />
                </LinearLayout>
            </TableRow>

            <!-- Number of stops line -->

            <TableRow
                android:id="@+id/remainingStopsLine">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginBottom="@dimen/minimum_margin"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/left_stopnum_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/left_stopnum_label"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/left_stopnum_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/minimum_margin"
                        android:text="@string/default_value" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <!-- Buttons line -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom" >

        <Button
            android:id="@+id/modify_tour_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/modify_tour" />

        <Button
            android:id="@+id/start_tour_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/minimum_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/start_tour" />

        <Button
            android:id="@+id/end_tour_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/end_tour"
            android:visibility="gone" />

        <Button
            android:id="@+id/continue_tour_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/minimum_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/continue_tour"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>