<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <LinearLayout
        android:id="@+id/move_up_down_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/move_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/move_up_button" />

        <ImageButton
            android:id="@+id/move_down_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/move_down_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/stop_order"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/minimum_margin"
        android:text="@string/default_value" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/minimum_margin" >

        <TextView
            android:id="@+id/stop_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="@string/default_value" />

        <!-- <TextView
            android:id="@+id/stop_coord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/default_value" /> -->

        <TextView
            android:id="@+id/previous_stop_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="italic"
            android:gravity="center_vertical"
            android:text="@string/previous_stop_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textStyle="italic"
                android:gravity="center_vertical"
                android:text="@string/distance_label" />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/minimum_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/default_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/minimum_margin" >

            <TextView
                android:id="@+id/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textStyle="italic"
                android:gravity="center_vertical"
                android:text="@string/time_label" />

            <TextView
                android:id="@+id/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/minimum_margin"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/default_value" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/remove_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/minimum_margin"
        android:src="@drawable/remove_button" />

    <ImageButton
        android:id="@+id/completed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/minimum_margin"
        android:src="@drawable/ic_sign_check_unsigned"
        android:visibility="gone" />

</LinearLayout>